Fix text positioning when overflow happens because of the small window

--- a/src/styles/popup/view/permissions.less
+++ b/src/styles/popup/view/permissions.less
@@ -5,9 +5,6 @@
   flex-direction: column;
 
   h3 {
-    display: flex;
-    flex-direction: column;
-
     span {
       .test-ellipsis();
       flex: 1;
